force-app/main/default/objects/Reading__c/Reading__c.object-meta.xml
<CustomObject>
    <label>Reading</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reading No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>