force-app/main/default/objects/Reading__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Readings</relationshipLabel>
    <relationshipName>Readings</relationshipName>
    <type>Lookup</type>
</CustomField>