force-app/main/default/objects/Reading__c/fields/ReadingTime__c.field-meta.xml
<CustomField>
    <fullName>ReadingTime__c</fullName>
    <label>Reading Time</label>
    <type>DateTime</type>
</CustomField>