force-app/main/default/objects/Reading__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>